remove logging, fix overflow of navbar

--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ body {
   text-decoration: none; /* no underlining */
 
   float: left;
-  padding: 1.4vw; /* 2.1vw; */
+  padding: 1.2vw; /* 2.1vw; */
 
   font-size: 25px;
   font-weight: bold;
